[gd_scene load_steps=2 format=3 uid="uid://cilwacmlp8b3k"]

[ext_resource type="Script" uid="uid://p58dkx16gglx" path="res://multiplayer/nakama_test.gd" id="1_nakama_test"]

[node name="NakamaTest" type="Node"]
script = ExtResource("1_nakama_test")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Nakama Multi-User Test"
horizontal_alignment = 1

[node name="Status" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Initializing..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Create Match (H)"

[node name="JoinContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="MatchIDInput" type="LineEdit" parent="UI/VBoxContainer/JoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Match ID"

[node name="JoinButton" type="Button" parent="UI/VBoxContainer/JoinContainer"]
layout_mode = 2
text = "Join (J)"

[node name="LeaveButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Leave Match (L)"

[node name="TestButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Send Test Data (T)"

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="MatchInfo" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Not in match"
horizontal_alignment = 1

[node name="PlayersInfo" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Players: 0"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Console" type="TextEdit" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
editable = false
